--- a/Areas/Management/Views/Shared/_AdminDashboard.cshtml
+++ b/Areas/Management/Views/Shared/_AdminDashboard.cshtml
@@ -221,7 +221,7 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-                        with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
 
                         <li class="nav-item menu-open">
                             <a asp-area="Management" asp-controller="Home" asp-action="Index2" class="nav-link active">
@@ -247,19 +247,19 @@
                                 <ul class="nav nav-treeview">
 
                                     @*<li class="nav-item">
-                                        <a href="#" class="nav-link">
-                                            <i class="fas fa-angle-double-right"></i>
-                                            <p>
+                        <a href="#" class="nav-link">
+                            <i class="fas fa-angle-double-right"></i>
+                            <p>
 
-                                                <i class="right fas fa-angle-left"></i>
-                                            </p>
-                                        </a>
-                                        <ul class="nav nav-treeview">
-                                        </ul>
+                                <i class="right fas fa-angle-left"></i>
+                            </p>
+                        </a>
+                        <ul class="nav nav-treeview">
+                        </ul>
 
 
 
-                                    </li>*@
+                    </li>*@
                                     @foreach (var submenu in items)
                                     {
                                         <li class="nav-item">
@@ -294,13 +294,24 @@
                             </a>
                         </li>
                         @*<li class="nav-item">
-                            <a asp-area="Management" asp-controller="Sales" asp-action="hisabkoro" class="nav-link">
+            <a asp-area="Management" asp-controller="Sales" asp-action="hisabkoro" class="nav-link">
+                <i class="fas fa-unlock-alt"></i>
+                <p>
+                    hisabkoro
+                </p>
+            </a>
+        </li>*@
+
+
+
+                        <li class="nav-item">
+                            <a asp-area="Management" asp-controller="Inventory" asp-action="CreateQrBulk" class="nav-link">
                                 <i class="fas fa-unlock-alt"></i>
                                 <p>
-                                    hisabkoro
+                                    Qr banao
                                 </p>
                             </a>
-                        </li>*@
+                        </li>
 
 </nav>
                 <!-- /.sidebar-menu -->
